Another static configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Do not save root static folders ( This is where collectstatic will collect all the files )
 /static/
 
+# ignore node_modules
+/node_modules
+
 
 # Created by https://www.gitignore.io/api/django,python,linux,osx,macos,vim
 
